[gd_scene load_steps=32 format=3 uid="uid://bm84penpd41o"]

[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_5geyr"]
[ext_resource type="PackedScene" uid="uid://brcj27mh1o8ey" path="res://scenes/component/velocity/velocity_component.tscn" id="2_30dh5"]
[ext_resource type="PackedScene" uid="uid://dibnj62lf4fqp" path="res://scenes/component/health/health_component.tscn" id="2_88qib"]
[ext_resource type="PackedScene" uid="uid://bogprwkvw2lg2" path="res://scenes/component/random_audio_2d/random_audio_component_2d.tscn" id="2_xsk66"]
[ext_resource type="AudioStream" uid="uid://c6ts0eiycfsg8" path="res://assets/audio/impact/footstep_snow_000.ogg" id="3_x37o0"]
[ext_resource type="AudioStream" uid="uid://b615gjkuraw3t" path="res://assets/audio/impact/footstep_snow_001.ogg" id="4_r1636"]
[ext_resource type="AudioStream" uid="uid://bvudy6q8q1cr7" path="res://assets/audio/impact/footstep_snow_002.ogg" id="5_4hmfw"]
[ext_resource type="AudioStream" uid="uid://j2uikt8kww4s" path="res://assets/audio/impact/footstep_snow_003.ogg" id="6_3yvlp"]
[ext_resource type="AudioStream" uid="uid://cx28wva5geif3" path="res://assets/audio/impact/footstep_snow_004.ogg" id="7_mxfd6"]
[ext_resource type="PackedScene" uid="uid://cdjt2bwi3w0j3" path="res://scenes/component/animated_entity/animated_entity_component.tscn" id="11_6ld7s"]
[ext_resource type="PackedScene" uid="uid://srmau4n7m1h" path="res://scenes/spells/spell_controller/spell_controller.tscn" id="11_oh6j8"]
[ext_resource type="Shader" path="res://resources/shaders/hit_flash_component.gdshader" id="12_0fvhb"]
[ext_resource type="SpriteFrames" uid="uid://btixhdtjsbckn" path="res://scenes/game_object/player/player.tres" id="13_8gpg4"]
[ext_resource type="Texture2D" uid="uid://dv5m73bysgwi7" path="res://scenes/game_object/player/spell_spritesheet.png" id="14_8fw1s"]

[sub_resource type="Animation" id="Animation_4fdg3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/AnimatedEntityComponent:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/AnimatedEntityComponent:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/CastFXAnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, -5.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/CastFXAnimatedSprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/CastFXAnimatedSprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visuals/CastFXAnimatedSprite2D:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Visuals/CastFXAnimatedSprite2D/PointLight2D:energy")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vlxid"]
resource_name = "cast"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/AnimatedEntityComponent:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"cast"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/AnimatedEntityComponent:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/CastFXAnimatedSprite2D:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(13, -5.5), Vector2(13.655, -10.32), Vector2(14.15, -17.41)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/CastFXAnimatedSprite2D:rotation")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1.5708, 1.23569, 2.17294]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/CastFXAnimatedSprite2D:frame")
tracks/4/interp = 0
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visuals/CastFXAnimatedSprite2D:self_modulate")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.509804), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Visuals/CastFXAnimatedSprite2D/PointLight2D:energy")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.25),
"transitions": PackedFloat32Array(2, 2, 0.5, 1),
"update": 0,
"values": [0.59, 0.98, 4.28, 0.0]
}

[sub_resource type="Animation" id="Animation_a35wp"]
resource_name = "walk"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/AnimatedEntityComponent:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/AnimatedEntityComponent:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x6soq"]
_data = {
"RESET": SubResource("Animation_4fdg3"),
"cast": SubResource("Animation_vlxid"),
"walk": SubResource("Animation_a35wp")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_px73p"]
bg_color = Color(0.909804, 0.270588, 0.215686, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_rh71r"]
radius = 32.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iive5"]
resource_local_to_scene = true
shader = ExtResource("12_0fvhb")
shader_parameter/lerp_percent = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ho0tv"]
atlas = ExtResource("14_8fw1s")
region = Rect2(0, 0, 19, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_idjo2"]
atlas = ExtResource("14_8fw1s")
region = Rect2(19, 0, 19, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_db7b5"]
atlas = ExtResource("14_8fw1s")
region = Rect2(38, 0, 19, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpaia"]
atlas = ExtResource("14_8fw1s")
region = Rect2(57, 0, 19, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lyeu"]
atlas = ExtResource("14_8fw1s")
region = Rect2(76, 0, 19, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_s3nhq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho0tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idjo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db7b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpaia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lyeu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_48vml"]
offsets = PackedFloat32Array(0.285156, 1)
colors = PackedColorArray(1, 0.172549, 1, 1, 1, 0.192157, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8nwie"]
gradient = SubResource("Gradient_48vml")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)
metadata/_snap_enabled = true

[sub_resource type="CircleShape2D" id="CircleShape2D_aa63p"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2jkg7"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_5geyr")

[node name="HitRandomAudioComponent2D" parent="." instance=ExtResource("2_xsk66")]
streams = Array[AudioStream]([ExtResource("3_x37o0"), ExtResource("4_r1636"), ExtResource("5_4hmfw"), ExtResource("6_3yvlp"), ExtResource("7_mxfd6")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x6soq")
}

[node name="VelocityComponent" parent="." instance=ExtResource("2_30dh5")]
max_speed = 70.0
acceleration = 25.0

[node name="HealthComponent" parent="." instance=ExtResource("2_88qib")]

[node name="Abilities" type="Node" parent="."]

[node name="SpellController" parent="." instance=ExtResource("11_oh6j8")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 4)
offset_left = -16.0
offset_top = -39.0
offset_right = 16.0
offset_bottom = -35.0
pivot_offset = Vector2(16, 2)
theme_override_styles/fill = SubResource("StyleBoxFlat_px73p")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
visible = false
position = Vector2(0, -5)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
shape = SubResource("CircleShape2D_rh71r")
debug_color = Color(0, 0.65098, 0.141176, 0.0509804)

[node name="Visuals" type="Node2D" parent="."]

[node name="AnimatedEntityComponent" parent="Visuals" node_paths=PackedStringArray("health_component") instance=ExtResource("11_6ld7s")]
material = SubResource("ShaderMaterial_iive5")
sprite_frames = ExtResource("13_8gpg4")
animation = &"walk"
offset = Vector2(0, -16)
health_component = NodePath("../../HealthComponent")

[node name="CastFXAnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
modulate = Color(1, 0.137255, 0.898039, 1)
self_modulate = Color(1, 1, 1, 0)
position = Vector2(13, -5.5)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_s3nhq")

[node name="PointLight2D" type="PointLight2D" parent="Visuals/CastFXAnimatedSprite2D"]
energy = 0.0
texture = SubResource("GradientTexture2D_8nwie")

[node name="CollisionArea2D" type="Area2D" parent="."]
visible = false
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
shape = SubResource("CircleShape2D_aa63p")
debug_color = Color(0.952941, 0.196078, 0.223529, 0.243137)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_2jkg7")
